@@ -1,7 +1,7 @@
 services:
   access_check.search_api_tasks:
     class: Drupal\search_api\Controller\ExecuteTasksAccessCheck
-    arguments: ['@search_api.server_task_manager']
+    arguments: ['@search_api.task_manager']
     tags:
       - { name: access_check, applies_to: _search_api_tasks }
 
