@@ -4,27 +4,27 @@ namespace Drupal\search_api\Controller;
 
 use Drupal\Core\Access\AccessResult;
 use Drupal\Core\Routing\Access\AccessInterface;
-use Drupal\search_api\Task\ServerTaskManagerInterface;
+use Drupal\search_api\Task\TaskManagerInterface;
 
 /**
- * Provides an access check for the "Execute server tasks" route.
+ * Provides an access check for the "Execute pending tasks" route.
  */
 class ExecuteTasksAccessCheck implements AccessInterface {
 
   /**
-   * The server tasks manager service.
+   * The tasks manager service.
    *
-   * @var \Drupal\search_api\Task\ServerTaskManagerInterface
+   * @var \Drupal\search_api\Task\TaskManagerInterface
    */
-  protected $serverTasksManager;
+  protected $tasksManager;
 
   /**
    * Creates an ExecuteTasksAccessCheck object.
    *
-   * @param \Drupal\search_api\Task\ServerTaskManagerInterface $serverTasksManager
+   * @param \Drupal\search_api\Task\TaskManagerInterface $tasksManager
    */
-  public function __construct(ServerTaskManagerInterface $serverTasksManager) {
-    $this->serverTasksManager = $serverTasksManager;
+  public function __construct(TaskManagerInterface $tasksManager) {
+    $this->tasksManager = $tasksManager;
   }
 
   /**
@@ -36,7 +36,7 @@ class ExecuteTasksAccessCheck implements AccessInterface {
   public function access() {
     // @todo Once #2722237 is fixed, see whether this can't just use the
     //   "search_api_task_list" cache tag instead.
-    if ($this->serverTasksManager->getCount()) {
+    if ($this->tasksManager->getTasksCount()) {
       return AccessResult::allowed()->setCacheMaxAge(0);
     }
     return AccessResult::forbidden()->setCacheMaxAge(0);
