@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2841550 by drunken monkey: Fixed execution of pending tasks.
 - #2841827 by umed91, drunken monkey: Fixed some code style issues.
 - #2682615 by drunken monkey: Added tests for object serialization and cloning.
 - #2794879 by drunken monkey: Added property paths to the "Fields" tab.
